# SC-2021-2022

./: .gitignore  README.rst
Projets/: README.md  affectation.py
Projets/01/: README.md
Projets/02/: README.md
Projets/03/: README.md
Projets/04/: README.md
Projets/05/: README.md
Projets/06/: README.md
Projets/07/: README.md
Projets/08/: README.md
Projets/09/: README.md
Projets/10/: README.md
Projets/11/: README.md
Projets/12/: README.md
Projets/13/: README.md
Seance01/: seance01.ipynb
Seance02/: graphe.py  lib.py  seance02.ipynb
Seance03/: graphe.py  lib.py  test_graphe.py
Seance04/: lib.py  seance04.ipynb  test_lib.py
Seance05/: lib.py  seance05.ipynb  test_lib.py
Seance06/: lib.py  seance06.ipynb  test_lib.py
Seance07/: lib.py  seance07.ipynb  test_lib.py
Seance08/: seance08.ipynb
Seance09/: lib_distance.py  lib_graphe.py  seance09.ipynb  test_distance.py  test_graphe.py
Seance10/: lib_distance.py  lib_graphe.py  seance10.ipynb  test_distance.py  test_graphe.py
Seance11/: lib_conversion.py  lib_probleme.py  seance11.ipynb
Seance12/: lib_conversion.py  lib_probleme.py  lib_resolution.py  seance12.ipynb  test_conversion.py  test_probleme.py  test_resolution.py
Seance13/: ordonnancement.py  seance13.ipynb  test_ordonnancement.py
exemple-projet/: README.md  pyproject.toml
exemple-projet/final/: __init__.py  __main__.py  conversion.py  data.py  graphes.py  resolution.py  seance.ipynb
exemple-projet/tests/: test_conversion.py  test_data.py  test_final.py  test_graphe.py  test_resolution.py
